# xibs

./: .buildinfo  .gitignore  .zenodo.json  CHANGES.md  Makefile  README.md  TODO.md  bibliography.doctree  bibliography.html  codeautolink-cache.json  faq.doctree  faq.html  genindex.html  index.doctree  index.html  objects.inv  pyproject.toml  quickstart.doctree  quickstart.html  search.html  searchindex.js  sg_execution_times.doctree  sg_execution_times.html
.github/workflows/: coverage.yml  cron.yml  documentation.yml  publish.yml  tests.yml
_downloads/201dbebd0ba146c9ddb0c8c9b8df9217/: demo_compare_kicks.ipynb
_downloads/30d5e62c717dca283eea9a3aa1731adb/: demo_analytical_auto_recompute_rates.ipynb
_downloads/44753cfd900e08e65d941ea131c64ba9/: demo_analytical_nagaitsev_emittances.ipynb
_downloads/4f8c3d90cf982f93802390b13c2f264b/: demo_analytical_emittances.ipynb
_downloads/525a9df5c5d7f05b48d2a5d3612d2faa/: demo_compare_kicks.py
_downloads/8266b696ee1a21b11713d48f664d0fbf/: demo_simple_kicks.ipynb
_downloads/8ab08741431e093be0e7164f898f84fc/: demo_kicks_auto_recompute_coefficients.ipynb
_downloads/95fc37aba452e8748176ec47348aa7bf/: demo_analytical_bjorken_mtingwa_emittances.py
_downloads/9c8cd7fd93d8c4e12d9757de68c9d74e/: demo_kinetic_kicks.ipynb
_downloads/a208997bd72f5ed734da4a4d31f898a4/: demo_kinetic_kicks.py
_downloads/c20ac328c40251e5ace7d9ea18116f76/: demo_compare_analyticals.py
_downloads/d59e6dd3d7cc32613f6e1a662e24af90/: demo_simple_kicks.py
_downloads/e7d7c058e6d7b1bd1854bc6bdc5a280b/: demo_compare_analyticals.ipynb
_downloads/ecda9ce448dc36dbc3ce2891b29ff0bc/: demo_analytical_bjorken_mtingwa_emittances.ipynb
_downloads/f23edd214f105e5f911df32af1ad9992/: demo_analytical_nagaitsev_emittances.py
_modules/: index.html
_modules/xibs/: analytical.html  dispatch.html  formulary.html  inputs.html  kicks.html  version.html
_sources/: faq.rst.txt  quickstart.rst.txt  sg_execution_times.rst.txt
_sources/faq/: index.rst.txt  input_parameters.rst.txt  radiation.rst.txt
_sources/gallery/: demo_analytical_auto_recompute_rates.rst.txt  demo_analytical_bjorken_mtingwa_emittances.rst.txt  demo_analytical_emittances.rst.txt  demo_analytical_nagaitsev_emittances.rst.txt  demo_compare_analyticals.rst.txt  demo_compare_kicks.rst.txt  demo_kicks_auto_recompute_coefficients.rst.txt  demo_kinetic_kicks.rst.txt  demo_simple_kicks.rst.txt  index.rst.txt  sg_execution_times.rst.txt
_sources/modules/: index.rst.txt
benchmark_scripts/: clic_dr.py
docs/: bibliography.rst  conf.py  faq.rst  index.rst  quickstart.rst  references.bib
docs/faq/: auto_recomputing.rst  coasting_beams.rst  emittance_types.rst  growth_rates.rst  index.rst  input_parameters.rst  radiation.rst
docs/modules/: index.rst
examples/: CLIC_DRs_IBS_allmodels.py  CLIC_DRs_XIBS_allmodels.py  README.rst  Xsuite_IBS.py  demo_analytical_auto_recompute_rates.py  demo_analytical_bjorken_mtingwa_emittances.py  demo_analytical_emittances.py  demo_analytical_nagaitsev_emittances.py  demo_compare_analyticals.py  demo_compare_kicks.py  demo_kicks_auto_recompute_coefficients.py  demo_kinetic_kicks.py  demo_simple_kicks.py  environment.yml  helpers.py  lhc.py  qq.py  untouched_clic_dr_script.py
examples/benchmarks/: clic_dr.py  clic_dr_analytical.py  clic_dr_analyticals_vs_old.py  clic_dr_both_kicks.py  clic_dr_kinetic_kicks.py  clic_dr_kinetic_vs_old.py  clic_dr_nagaitsev_vs_old.py  gpu_and_kinetic_kicks.py  lhc_injection_protons.py  lhc_injection_protons_analyticals_vs_old.py  lhc_injection_protons_nagaitsev.py  lhc_injection_protons_nagaitsev_vs_old.py  lhc_top_ions.py  lhc_top_ions_analyticals_vs_old.py  lhc_top_ions_nagaitsev.py  lhc_top_protons.py  lhc_top_protons_nagaitsev_vs_old.py  ps_injection_ions.py  ps_injection_ions_analyticals_vs_old.py  ps_injection_ions_nagaitsev_vs_old.py  ps_injection_protons.py  ps_injection_protons_analyticals_vs_old.py  ps_injection_protons_nagaitsev.py  sps_injection_ions_kinetic_kicks.py  sps_injection_ions_kinetic_kicks_compare_growth_rates.py  sps_top_ions_both_kicks.py  sps_top_ions_kinetic_gpu_for_elias.py  sps_top_ions_kinetic_kicks.py  sps_top_ions_kinetic_kicks_vs_old.py  sps_top_ions_kinetic_vs_simple.py  sps_top_ions_simple_kicks.py  sps_top_ions_simple_kicks_vs_old.py
examples/lib/: Kineticfunctions.py  general_functions.py
examples/lines/: clic_particles.json  sps_top_ions.json
examples/plotting/: comparison.ipynb
faq/: auto_recomputing.doctree  auto_recomputing.html  coasting_beams.doctree  coasting_beams.html  emittance_types.doctree  emittance_types.html  index.doctree  index.html  input_parameters.doctree  input_parameters.html  radiation.doctree  radiation.html
gallery/: demo_analytical_auto_recompute_rates.doctree  demo_analytical_auto_recompute_rates.html  demo_analytical_bjorken_mtingwa_emittances.doctree  demo_analytical_bjorken_mtingwa_emittances.html  demo_analytical_emittances.doctree  demo_analytical_emittances.html  demo_analytical_nagaitsev_emittances.doctree  demo_analytical_nagaitsev_emittances.html  demo_compare_analyticals.doctree  demo_compare_analyticals.html  demo_compare_kicks.doctree  demo_compare_kicks.html  demo_kicks_auto_recompute_coefficients.doctree  demo_kicks_auto_recompute_coefficients.html  demo_kinetic_kicks.doctree  demo_kinetic_kicks.html  demo_simple_kicks.doctree  demo_simple_kicks.html  index.doctree  index.html  sg_execution_times.doctree  sg_execution_times.html
modules/: index.doctree  index.html
tests/: conftest.py  helpers.py  test_analytical.py  test_dispatch.py  test_fixtures.py  test_inputs.py  test_lhc_analytical.py  test_ps_analytical.py  test_version.py
xibs/: __init__.py  _old_michail.py  _old_michalis.py  analytical.py  dispatch.py  formulary.py  inputs.py  kicks.py  kinetic.py  nagaitsev.py  simple.py  version.py
(+52 files in other folders)
